rtedus warning null